syntax = "proto3";

option java_multiple_files = true;
package pt.tecnico.rrrd.contract;

service RemoteServer {
  rpc Pull (PullRequest) returns (PullResponse) {}
  rpc Push (PushRequest) returns (PushResponse) {}
  rpc AddNewFile (AddFileRequest) returns (AddFileResponse) {}
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse) {}
  rpc GetPubKeys (GetPubKeysRequest) returns (GetPubKeysResponse) {}
  rpc AddPermission (AddPermissionRequest) returns (AddPermissionResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
}

message PullRequest {
  PullMessage message = 1;
  string signature = 2;
}

message PullMessage {
  string documentId = 1;
  string timestamp = 2;
}

message PullResponse {
  string document = 1;
  string documentKey = 2;
}

message PushRequest {
  PushMessage message = 1;
  string signature = 2;
}

message PushMessage {
  string documentId = 1;
  string encryptedDocument = 2;
  string timestamp = 3;
}
  
message PushResponse {
  string message = 1;
}

message AddFileRequest {
  AddFileMessage message = 1;
  string signature = 2;
}

message AddFileMessage {
  string documentId = 1;
  string encryptedDocument = 2;
  string timestamp = 3;
}

message AddFileResponse {
  string message = 1;
}

message DeleteFileRequest{
  DeleteMessage message = 1;
  string signature = 2;
}

message DeleteMessage{
  string documentId = 1;
}

message DeleteFileResponse{
}

message GetPubKeysRequest {
  GetPubKeysMessage message = 1;
  string signature = 2;
}

message GetPubKeysMessage {
  string username = 1;
  string timestamp = 2;
}

message GetPubKeysResponse {
  map<int32, string> pubKeys = 1;
}

message AddPermissionRequest {
  AddPermissionMessage message = 1;
  string signature = 2;
}

message AddPermissionMessage {
  string documentId = 1;
  string username = 2;
  map<int32, string> pubKeys = 3;
  string timestamp = 4;
}

message AddPermissionResponse {
  string message = 1;
}

message LoginRequest {
  LoginMessage message = 1;
  string signature = 2;
}

message LoginMessage {
  LoginCredentials credentials = 1;
  string clientPubKey = 2;
  string timestamp = 3;
}

message LoginCredentials {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message LogoutRequest {

}

message LogoutResponse {

}